--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -52,6 +52,9 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\EnemyshipController.cs" />
+     <Compile Include="Assets\Scripts\FireballController.cs" />
+     <Compile Include="Assets\Scripts\GameController.cs" />
+     <Compile Include="Assets\Scripts\Player.cs" />
      <Compile Include="Assets\Scripts\SpaceController.cs" />
      <Compile Include="Assets\Scripts\SpaceshipCollision.cs" />
      <Compile Include="Assets\Scripts\SpaceshipController.cs" />
